--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,11 +13,14 @@
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.483.0",
     "next": "15.2.3",
     "raw-loader": "^4.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-firebase-hooks": "^5.1.1",
+    "react-router-dom": "^7.4.1",
     "tailwind-merge": "^3.0.2",
     "tw-animate-css": "^1.2.4"
   },
